<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="CategoryBase"
        app:title="@string/SettingsCategoryBasic"
        app:iconSpaceReserved="false">

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="AutoOpen"
            app:title="@string/SettingsAutoOpenTitle"
            app:summary="@string/SettingsAutoOpenSummary"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            android:inputType="text"
            app:singleLineTitle="true"
            app:defaultValue="com.wow.carlauncher.mini"
            app:key="LauncherPackage"
            app:title="@string/SettingsAutoOpenPackageName"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            android:inputType="number"
            app:key="AndroidAutoDpi"
            app:title="@string/SettingsAndroidAutoDpi"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:inputType="number"
            app:key="VirtualDisplayDpi"
            app:title="@string/SettingsVirtualDisplayDpi"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="180"
            app:key="DelayDestroyTime"
            app:title="@string/SettingsDestructionDelay"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="ScreenOffReplaceLockScreen"
            app:title="@string/SettingsReplaceLockScreenTitle"
            app:summary="@string/SettingsReplaceLockScreenSummary"
            app:iconSpaceReserved="false"/>

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="CloseLauncherDashboard"
            app:title="@string/SettingsCloseLauncherDashboard"
            app:iconSpaceReserved="false"/>

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="ForceRightAngle"
            app:title="@string/SettingsForceRightAngle"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:key="DisplayImePolicy"
            app:defaultValue="1"
            app:title="@string/SettingsImePolicy"
            app:entries="@array/ime_policy_keys"
            app:entryValues="@array/ime_policy_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            android:inputType="text"
            app:singleLineTitle="true"
            app:defaultValue="am start com.miui.voiceassist/com.xiaomi.voiceassistant.CTAAlertActivity"
            app:key="VoiceAssistShell"
            app:title="@string/SettingsVoiceAssistantShell"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="CategoryShell"
        app:title="@string/SettingsCategoryShell"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:inputType="textMultiLine"
            app:key="CreateVirtualDisplayBefore"
            app:title="@string/SettingsShellCreateVirtualDisplayBefore"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            android:inputType="textMultiLine"
            app:key="DestroyVirtualDisplayAfter"
            app:title="@string/SettingsShellDestroyVirtualDisplayAfter"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="CategoryPhysicalBtn"
        app:title="@string/SettingsCategoryPhysicalBtn"
        app:summary="TODO"
        app:iconSpaceReserved="false">
    </PreferenceCategory>

    <PreferenceCategory
        app:key="CategoryAndroidAuto"
        app:title="@string/SettingsCategoryAndroidAutoProps"
        app:summary="[com.google.android."
        app:singleLineTitle="true"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:inputType="textMultiLine"
            app:key="ComGoogleAndroidProjectionGearheadProps"
            app:title="@{`projection.gearhead]`+@string/props}"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            android:inputType="textMultiLine"
            app:key="ComGoogleAndroidGmsCarProps"
            app:title="gms.car] properties"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

<!--
    <PreferenceCategory
        app:key="CategoryLauncherMode"
        app:title="启动模式"
        app:summary="support mode: ucar,samsung,vivo,huawei"
        app:singleLineTitle="true"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:inputType="textMultiLine"
            app:key="LauncherModeProps"
            app:title="配置"
            app:defaultValue="com.baidu.BaiduMap=samsung\ncom.autonavi.minimap=ucar\ncom.kugou.android=huawei"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>
-->

</PreferenceScreen>